--- a/FinalProject-OnlineShopping-/src/app/accountant/accountant.component.html
+++ b/FinalProject-OnlineShopping-/src/app/accountant/accountant.component.html
@@ -1,31 +1,15 @@
+<p>accountant works!</p>
+<app-accountant-page *ngFor="let x of AccountantService.data" [accountantId]='x.accountantId' [accountantName]='x.accountantName' [email]='x.email'
+[phone]='x.phone' [address]='x.address' [image]='x.image'   [salary]='x.salary'
+ ></app-accountant-page>
 
 
-            <table class="table table-striped">
-                <thead>
-                  <tr  >
-                    <th scope="col" *ngFor="let colom of AccountantService.headers">{{ colom }}</th>
-                  
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr  *ngFor="let row of AccountantService.data" >
-                    
-                    <td *ngFor="let colom of AccountantService.headers">{{ row[colom] }}</td>
-                   
-                  </tr>
-                </tbody>
-              </table>
-            
-              <h1 mat-dialog-title style="text-align: center;">All INFO ACCOUNTANT</h1>
-            
-            <div mat-dialog-actions>
-              <button mat-button mat-dialog-close class="info">Close</button>
-            </div>
-
-           
-
-            
-            
-              
-            
-
+  
+<form>
+    <div>
+       <p>search by id Accountant</p> 
+        <input (change)="getAccountantById($event)">
+    </div>
+</form>
+ <button (click)="createaccountant()">createAccountant</button>
+ 
