--- a/FinalProject-OnlineShopping-/src/app/customer/customer.component.html
+++ b/FinalProject-OnlineShopping-/src/app/customer/customer.component.html
@@ -1,49 +1,19 @@
 
 
-<!-- 
-<app-customer-page *ngFor="let x of customerservice.data" [customerId]='x.customerId' [fullName]='x.fullName' [email]='x.email'
-[phone]='x.phone' [address]='x.address' [image]='x.image'
- ></app-customer-page> -->
 
-
- <!-- <p>influencer works!</p> -->
-
-<!-- {{ fullName }} -->
-
-<!-- <table class="table" id="tableData">
-    <thead class="text-white">
-        <th>Category</th>
-        <th>Number Of Advertisement</th>
-        <th>Total Of Payment</th>
-    </thead>
-
-
-    <tbody>
-        <tr *ngFor="let report of adService.reportData">
-            <td *ngIf="report.categoryId == 1"> Apartment </td>
-            <td *ngIf="report.categoryId == 3"> Building </td>
-            <td *ngIf="report.categoryId == 6"> Commercial </td>
-            <td>{{report.countOfAdvByCategory}}</td> -->
 
 <table class="table table-striped">
     <thead>
       <tr  >
-        <th scope="col" *ngFor="let colom of CustomerService.headers">{{ colom }}</th>
-        <!-- <th scope="col">Full Name</th>
-        <th scope="col">Email</th>
-        <th scope="col">Phone</th>
-        <th scope="col">Address</th>
-        <th scope="col">image</th> -->
+        <th scope="col" *ngFor="let colom of customerservice.headers">{{ colom }}</th>
+        
       </tr>
     </thead>
     <tbody>
-      <tr  *ngFor="let row of CustomerService.data" >
+      <tr  *ngFor="let row of customerservice.data" >
         
-        <td *ngFor="let colom of CustomerService.headers">{{ row[colom] }}</td>
-        <!-- <td>{{x.email}}</td>
-        <td>{{x.phone}}</td>
-        <td>{{x.address}}</td>
-        <td>{{x.image}}</td> -->
+        <td *ngFor="let colom of customerservice.headers">{{ row[colom] }}</td>
+        
       </tr>
     </tbody>
   </table>
@@ -56,3 +26,37 @@
 
 
   
+<!-- ================================ -->
+
+
+<app-customer-page *ngFor="let x of customerservice.data" [customerId]='x.customerId' [fullName]='x.fullName' [email]='x.email'
+[phone]='x.phone' [address]='x.address' [image]='x.image' 
+
+ ></app-customer-page>
+
+ 
+<form>
+    <div>
+       <p>search by id customer</p> 
+        <input (change)="getCustomerById($event)">
+    </div>
+</form>
+
+<div>
+    <p>ReportBuyCustomer</p>
+    <input (change)="ReportBuyCustomer($event)">
+
+</div>
+
+
+
+
+ <app-report-buy-customer *ngFor="let x of customerservice.data" [customerName]='x.customerName'
+  [productName]='x.productName' [price]='x.price'
+[qty]='x.qty' [totalPrice]='x.totalPrice' 
+></app-report-buy-customer >
+
+
+<button (click)="createCustomer()">Create Customer</button>
+
+
