--- a/FinalProject-OnlineShopping-/src/app/delivery/delivery.component.html
+++ b/FinalProject-OnlineShopping-/src/app/delivery/delivery.component.html
@@ -1,41 +1,17 @@
-<!-- <p>influencer works!</p> -->
 
-<!-- {{ fullName }} -->
-
-<!-- <table class="table" id="tableData">
-    <thead class="text-white">
-        <th>Category</th>
-        <th>Number Of Advertisement</th>
-        <th>Total Of Payment</th>
-    </thead>
-
-
-    <tbody>
-        <tr *ngFor="let report of adService.reportData">
-            <td *ngIf="report.categoryId == 1"> Apartment </td>
-            <td *ngIf="report.categoryId == 3"> Building </td>
-            <td *ngIf="report.categoryId == 6"> Commercial </td>
-            <td>{{report.countOfAdvByCategory}}</td> -->
 
             <table class="table table-striped">
                 <thead>
                   <tr  >
                     <th scope="col" *ngFor="let colom of DeliveryService.headers">{{ colom }}</th>
-                    <!-- <th scope="col">Full Name</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Phone</th>
-                    <th scope="col">Address</th>
-                    <th scope="col">image</th> -->
+                    
                   </tr>
                 </thead>
                 <tbody>
                   <tr  *ngFor="let row of DeliveryService.data" >
                     
                     <td *ngFor="let colom of DeliveryService.headers">{{ row[colom] }}</td>
-                    <!-- <td>{{x.email}}</td>
-                    <td>{{x.phone}}</td>
-                    <td>{{x.address}}</td>
-                    <td>{{x.image}}</td> -->
+                    
                   </tr>
                 </tbody>
               </table>
@@ -46,6 +22,20 @@
               <button mat-button mat-dialog-close class="info">Close</button>
             </div>
             
-            
+<!-- ======================== -->
+
+{{ deliveryId }}
+{{ deliveryName }}
+{{ email }}
+{{ phone }}
+{{ address }}
+{{ image }}
+{{ salary }}
+{{ attendence }}
+{{ login }}
+{{ orderProduct }}
+<br>
+
+<button mat-button (click)="DeleteItemDelivery()">Delete</button>
               
             
