--- a/FinalProject-OnlineShopping-/src/app/accountant-page/accountant-page.component.html
+++ b/FinalProject-OnlineShopping-/src/app/accountant-page/accountant-page.component.html
@@ -1,7 +1,18 @@
 <p>accountant-page works!</p>
-
-<app-accountant *ngFor="let x of AccountantService.data" [accountantName]='x.accountantName' [accountantId]='x.accountantId'
-[email]="x.email" [phone]="x.phone" [address]="x.address" [image]="x.image" [salary]='x.salary' 
-
-></app-accountant>
-
+<mat-card class="example-card" style="margin-left: 10px;">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>{{ accountantName }}  </mat-card-title>
+      <mat-card-subtitle>{{ email }} </mat-card-subtitle>
+    </mat-card-header>
+    <!-- <img mat-card-image src="assets/login.jpeg" width="200px" height="400" alt="Photo of a Shiba Inu"> -->
+    <mat-card-content>
+      <p>
+      {{ phone }}
+      </p>
+    </mat-card-content>
+    <mat-card-actions> 
+      <button mat-button (click)="DeleteItemAccountant()">Delete</button>
+     
+    </mat-card-actions>
+  </mat-card>
