--- a/FinalProject-OnlineShopping-/src/app/attendence/attendence.component.html
+++ b/FinalProject-OnlineShopping-/src/app/attendence/attendence.component.html
@@ -1,2 +1,19 @@
 <p>attendence works!</p>
-{{ attendenceStartDate }}
+
+
+
+
+
+<mat-card class="example-card" style="margin-left: 10px;">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>{{ attendenceStartDate }}  </mat-card-title>
+      <mat-card-subtitle>{{ attendenceStartDate }} </mat-card-subtitle>
+    </mat-card-header>
+    <!-- <img mat-card-image src="assets/login.jpeg" width="200px" height="400" alt="Photo of a Shiba Inu"> -->
+   
+    <mat-card-actions> 
+        <button mat-button (click)="DeleteItemAttendence()">Delete</button>
+     
+    </mat-card-actions>
+  </mat-card>
