--- a/FinalProject-OnlineShopping-/src/app/cart-page/cart-page.component.html
+++ b/FinalProject-OnlineShopping-/src/app/cart-page/cart-page.component.html
@@ -1,3 +1,4 @@
 <p>cart-page works!</p>
 
 <p style="background-color: red;"> {{ startDate }}</p>
+<button mat-button (click)="DeleteItemCart()">Delete</button>
