--- a/FinalProject-OnlineShopping-/src/app/category/category.component.html
+++ b/FinalProject-OnlineShopping-/src/app/category/category.component.html
@@ -1,7 +1,96 @@
 
+<!-- ****** New Arrivals Area Start ****** -->
+<section class="new_arrivals_area section_padding_100_0 clearfix">
+ 
+ 
 
-{{ categoryName }}
-{{ categoryId }}
-{{ influencerId }}
-{{ influencer }}
-{{ product }}
+    <div class="container">
+      <div class="row karl-new-arrivals">
+  
+  
+  
+  
+  
+  
+  
+  
+        <!-- Single gallery Item Start -->
+        <div class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.2s">
+          <!-- Product Image -->
+          <div class="product-img">
+            <img src="assets/img/product-img/product-1.jpg" alt="">
+            <div class="product-quicview">
+              <a href="#" data-toggle="modal" data-target="#quickview"><i class="ti-plus"></i></a>
+            </div>
+          </div>
+          <!-- Product Description -->
+          <div class="product-description">
+            <h4 class="product-price">$39.90</h4>
+  
+  
+            <a href="#" class="add-to-cart-btn">{{ categoryName }}</a>
+          </div>
+        </div>
+  
+        <!-- Single gallery Item Start -->
+        <div class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.3s">
+          <!-- Product Image -->
+          <div class="product-img">
+            <img src="assets/img/product-img/product-2.jpg" alt="">
+            <div class="product-quicview">
+              <a href="#" data-toggle="modal" data-target="#quickview"><i class="ti-plus"></i></a>
+            </div>
+          </div>
+          <!-- Product Description -->
+          <div class="product-description">
+            <h4 class="product-price">$39.90</h4>
+  
+            <!-- Add to Cart -->
+            <a href="#" class="add-to-cart-btn">{{ categoryName }}</a>
+          </div>
+        </div>
+  
+        <!-- Single gallery Item Start -->
+        <div class="col-12 col-sm-6 col-md-4 single_gallery_item access wow fadeInUpBig" data-wow-delay="0.4s">
+          <!-- Product Image -->
+          <div class="product-img">
+            <img src="assets/img/product-img/product-3.jpg" alt="">
+  
+            <div class="product-quicview">
+              <a href="#" data-toggle="modal" data-target="#quickview"><i class="ti-plus"></i></a>
+            </div>
+            
+            <!-- <a  href="#" class="add-to-cart-btn">{{ categoryName }}</a> -->
+          </div>
+          
+          <div class="submit"  >
+            <a href="#" class="add-to-cart-btn">{{ categoryName }}</a>
+           
+          </div>
+  
+        </div>
+  
+      </div>
+    </div>
+  </section>
+  
+  <app-category-page *ngFor="let x of    categoryService.data"  [categoryName]='x.categoryName' 
+  [influencerId]='x.influencerId'
+  [Image]='x.Image'
+   ></app-category-page>
+  
+   <button mat-button (click)="createCategory()">Create</button>
+  
+  <!-- {{ categoryName }}
+  {{ categoryId }}
+  {{ influencerId }}
+  {{ influencer }}
+  {{ product }} -->
+  <!-- {{Image}} -->
+  
+  
+  <button mat-button (click)="DeleteItemcategory()">Delete</button>
+  
+  
+  
+  
