--- a/FinalProject-OnlineShopping-/src/app/customer-page/customer-page.component.html
+++ b/FinalProject-OnlineShopping-/src/app/customer-page/customer-page.component.html
@@ -1,7 +1,29 @@
 
 
-<app-customer *ngFor="let x of CustomerService.data" [fullName]='x.fullName' [customerId]='x.customerId'
-[email]="x.email" [phone]="x.phone" [address]="x.address" [image]="x.image"
 
-></app-customer>
+<!-- {{ fullName }}
 
+<button mat-button (click)="DeleteItem()">Delete</button> -->
+
+<mat-card class="example-card" style="margin-left: 10px;">
+
+ 
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>{{ fullName }}  </mat-card-title>
+      <mat-card-subtitle>{{ email }} </mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="assets/login.jpeg" width="200px" height="400" alt="Photo of a Shiba Inu">
+    <mat-card-content>
+      <p>
+      {{ phone }}
+      </p>
+    </mat-card-content>
+    <mat-card-actions> 
+
+    
+      <button mat-button (click)="DeleteItemcustomer()">Delete</button>
+     
+    </mat-card-actions>
+  </mat-card>
+  
